suppressed or fixed warnings, added transform for compose and distinct