@@ -40,7 +40,7 @@ public class DocumentInfoAction extends AbstractAction {
 
 		_theFrame = inFrame;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_I));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_I));
 		putValue(Action.SHORT_DESCRIPTION, "Information about the current sketch");
 	}
 
