@@ -37,7 +37,7 @@ public class FileClearViewAction extends AbstractAction {
 
 		_theFrame = inFrame;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_N));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_N));
 		putValue(Action.SHORT_DESCRIPTION, "Start new sketch");
 	}
 
