@@ -45,7 +45,7 @@ public class SketchExportAction extends AbstractAction {
 
 		_theFrame = inFrame;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_A));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_A));
 		putValue(Action.SHORT_DESCRIPTION, "Export current sketch as XML document");
 	}
 
