@@ -34,12 +34,13 @@ public class DefineQueryNodeAction extends AbstractAction {
 	 *
 	 * @param inFrame
 	 */
+	@SuppressWarnings("deprecation")
 	public DefineQueryNodeAction(ViewFrame inFrame) {
 		super("Edit view node...");
 
 		_theFrame = inFrame;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_R));
 		putValue(Action.SHORT_DESCRIPTION, "Change the name of selection");
 	}
 
