@@ -35,7 +35,7 @@ public class EditViewEdgeAction extends AbstractAction {
 
 		_theFrame = inFrame;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_R));
 		putValue(Action.SHORT_DESCRIPTION, "Edit the name and cascade option of the selected edge");
 	}
 
