@@ -35,12 +35,13 @@ public class DefineQueryNodeFromTreeAction extends AbstractAction {
 	 *
 	 * @param inFrame
 	 */
+	@SuppressWarnings("deprecation")
 	public DefineQueryNodeFromTreeAction(ViewFrame inFrame) {
 		super("Define query node...");
 
 		_theFrame = inFrame;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_R));
 		putValue(Action.SHORT_DESCRIPTION, "Change the name of selection");
 	}
 
