@@ -43,7 +43,7 @@ public class RenameEntityAction<F extends ModelFrame<F, GM, M, N, E>, GM extends
 
 		_theFrame = _theFrame2;
 
-		putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+		putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_R));
 		putValue(Action.SHORT_DESCRIPTION, "Change the name of selection");
 	}
 
